# veiback

./: .dockerignore  .mdev  CLAUDE.md  README.md  resume.yaml
.github/workflows/: cv.yml  package-ci.yml  webpage.yml
cv/: .dev  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cv/doc/: PLAN.md
cv/src/: print.css  print.html  website.css  website.html
cv/src/app/: main.py
cv/src/app/cv/: data.py  render.py
cv/src/cv/: main.py
cv/src/cv/engines/: puppeteer.py
webpage/: .claudeignore  .dev  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
webpage/doc/: REQUIREMENTS.md
webpage/public/: .htaccess
webpage/scripts/: deploy.sh
webpage/src/components/: About.astro  Clients.astro  Contact.astro  Experience.astro  Hero.astro  HeroBackground.astro  Nav.astro  Services.astro
webpage/src/data/: content.en.yaml  content.sv.yaml
webpage/src/layouts/: BaseLayout.astro
webpage/src/lib/: dataLoader.ts  messages.ts  types.ts
webpage/src/pages/: index.astro
webpage/src/pages/[lang]/: index.astro
webpage/src/styles/: animations.css  globals.css
